the through-line is there now

--- a/randomness/locales.bib
+++ b/randomness/locales.bib
@@ -1,3 +1,11 @@
+@book{sketches,
+      author        = "Johnstone, Peter T",
+      title         = "{Sketches of an elephant: a Topos theory compendium}",
+      publisher     = "Oxford Univ. Press",
+      address       = "New York, NY",
+      series        = "Oxford logic guides",
+      year          = "2002",
+}
 @book{maclane,
       author        = "MacLane, Saunders and Moerdijk, Ieke",
       title         = "{Sheaves in geometry and logic: a first introduction to
