near-final draft

--- a/randomness/locales.bib
+++ b/randomness/locales.bib
@@ -1,3 +1,19 @@
+@Inbook{johnstone2,
+author="Johnstone, Peter",
+editor="Aull, C. E.
+and Lowen, R.",
+title="Elements of the History of Locale Theory",
+bookTitle="Handbook of the History of General Topology",
+year="2001",
+publisher="Springer Netherlands",
+address="Dordrecht",
+pages="835--851",
+abstract="In the early history of topology, Felix Hausdorff [27] is generally (and rightly) credited with being the first person to emphasize the importance of the notion of open set in formulating the definitions of topological concepts. (Some credit for popularizing the idea should perhaps also be given to the Polish school of topologists led by Sierpi{\'{n}}ski and Kuratowski, in the years after the First World War.) The idea has therefore been around for almost as long as topology itself that a topological space is something which possesses (indeed, is defined by) a lattice of open subsets, as well as a set of points.",
+isbn="978-94-017-0470-0",
+doi="10.1007/978-94-017-0470-0_2",
+url="https://doi.org/10.1007/978-94-017-0470-0_2"
+}
+
 @book{sketches,
       author        = "Johnstone, Peter T",
       title         = "{Sketches of an elephant: a Topos theory compendium}",
