--- a/randomness/locales.tex
+++ b/randomness/locales.tex
@@ -93,6 +93,7 @@
 \newcommand{\bgconn}{\ensuremath{\textbf{B}G_{\textsf{conn}}}}
 \newcommand{\bgdiff}{\ensuremath{\textbf{B}G_{\textsf{diff}}}}
 \newcommand{\ran}{\ensuremath{\mathrm{Ran}}}
+\newcommand{\sig}{\ensuremath{\sigma-}}
 
 \newcommand{\gc}[1]{\marginpar{\bf $\leftarrow$ {#1}}}
 %\newcommand{\gc}[1]{}
@@ -115,7 +116,7 @@ Random real numbers satisfy the following hand-waving characterizations.
 \item They obey almost-everywhere properties.
 \item They appear tied to the foundations of mathematics.
 \end{enumerate}
-For a survey of these and other properties, see Rute \cite{rute}. I will argue that defining random points in terms of locales is well suited to capturing or even explaining all three of these properties.
+For a survey of these and other properties, see Rute \cite{rute}. I will argue that defining random points in terms of locales is well suited to capturing or even explaining all three of these properties. First of all, locales provide a setting for topology that supports constructive arguments, and randomness is in some sense the opposite of constructivity. Secondly, locales provide a model of topological spaces and continuous functions, so we can connect with classical results in analysis such as almost-everywhere theorems like Lebesgue's theorem. And thirdly locales vastly generalize from set theory to topos theory and type theory, a constructive setting where the modern categorical foundations are being explored, and constructions like the effective topos and assemblies capture computability in a general context.
 \section{Randomness vs determinism: a confused debate}
 In the Stanford Encyclopedia of Philosophy's article on Chance and Randomness \cite{sep-chance-randomness}, section 5.2 ("Chaotic Dynamics"), the authors describe an iterated transformation on the unit square, somewhat analogous to repeatedly folding dough. Given a starting point $(p,q), 0\leq p, q\leq 1$, define a function
 \[
@@ -132,42 +133,42 @@ The resolution of the paradox, I believe, is to worry more about whether you can
 
 Indeed, the most important property of random numbers appears to be their infinite nature, which prevents us from ever having one fully specified for us, either in a machine, in our minds, or in our theories. They are not computable, and they are not constructible.
 
-However, there are several different definitions of algorithmic randomness. In fact there is a whole family (or if you're in a teasing mood, a zoo) of them. They go by names such as Martin-Löf randomness, Schnorr randomness, weak-$n$-randomness, and computable randomness. They are not equivalent but they form a simple chain of inclusions, and the differences can be logically explained and outsourced to a family of choices or parameters that connect them. What I will present here is a consideration that is orthogonal to the flavor of randomness, and this is the \emph{packaging} of the random numbers inside the reals. The main ingredient is a shift from \emph{set theory} to \emph{locale theory}. A locale is a generalization of a topological space, and I will argue that it is very well suited to a philosophical interpretation of randomness.
+Confusingly, there are several different definitions of algorithmic randomness. In fact there is a whole family (or if you're in a teasing mood, a zoo) of them. They go by names such as Martin-Löf randomness, Schnorr randomness, weak-$n$-randomness, and computable randomness. They are not equivalent but they form a simple chain of inclusions, and smart people have worked out that the differences can be logically explained and parameterized by a family of choices that relate them. What I will present here is a consideration that is orthogonal to the flavor of randomness, and this is the \emph{packaging} of the random numbers inside the reals. The main ingredient is a shift from \emph{set theory} to \emph{locale theory}. A locale is a generalization of a topological space, and I will argue that it is very well suited to a philosophical interpretation of randomness.
 
-In \cite{simpson}, Alex Simpson has formulated a measure theory for locales and provided a new definition of randomness in this setting. We will describe this work, emphasizing the \emph{point-free} interpretation. The beautiful punch line will be that the sublocale of random real numbers has no points! This is a wonderful result that feels tailor-made for discussing randomness. 
+Mathematicians have been learning to appreciate the advantages that locale theory brings, along with its related disciplines of topos theory and type theory. When you tie one hand behind your back (such as avoiding the axiom of choice, and/or the law of the excluded middle) then the constructions and proofs you need to reinvent turn out to be more illuminating and much deeper than before. I want to convince you that this is true for algorithmic randomness. In \cite{simpson}, Alex Simpson has formulated a measure theory for locales and provided a new definition of randomness in this setting. I will describe this work, emphasizing the \emph{point-free} interpretation.
 
 \section{Frames and Locales}
 
-Locale theory is point-free topology. See \cite{johnstone1983} for an accessible survey, or Chapter IX of Mac Lane and Moerdijk \cite{maclane} for a pleasantly breezy but more thorough introduction, or Johnstone \cite{sketches} chapter C1 for a detailed treatment. It is \emph{synthetic} topology in that it takes open sets as basic, undefined objects, instead of defining them as collections of points. Instead it is points that will become derived. Topological spaces with their actual open sets of actual points are special cases of locales, but the enlarged category of locales isolates just the axioms we need to prove many theorems from topology. This will give us a unique point of view on randomness.
+Locale theory is point-free topology. See \cite{johnstone1983} for an accessible survey, or Chapter IX of Mac Lane and Moerdijk \cite{maclane} for a pleasantly breezy but more thorough introduction, or Johnstone \cite{sketches} chapter C1 for a detailed treatment. It is \emph{synthetic} topology in that it takes open sets as basic, undefined objects, instead of defining them as collections of points. Instead it is points that will become a derived concept. Topological spaces with their actual open sets of actual points provide examples of locales, but the enlarged category of arbitrary locales including ``non-spatial'' ones has some very new and unexpected properties. This will give us a new point of view on randomness.
 
-A \emph{frame} is a partially ordered set with finite meets $\wedge$ and arbitrary joins $\vee$, with a maximal element $\top$ and minimal element $\bottom$, and where the infinite distributive law holds: $$x \wedge (\bigvee_i y_i)=\bigvee_i (x\wedge y_i).$$ These are clearly abstracted from the axioms for a topology. If we require only countable joins then it is called a $\sigma$-frame. The open sets of a topological space form a frame (or a $\sigma$-frame). A frame map is a function that preserves finite meets and arbitrary joins. A $\sigma$-frame map preserves countable joins. We collect this data into the category \Frm\ of frames and \sFrm\ of $\sigma$-frames.
+A locale is mostly a \emph{frame}. A frame is a partially ordered set (poset) with finite meets $\wedge$ and arbitrary joins $\vee$, with a maximal element $\top$ and minimal element $\bottom$, and where the infinite distributive law holds: $$x \wedge (\bigvee_i y_i)=\bigvee_i (x\wedge y_i).$$ This definition is clearly abstracted from the axioms for a topology. If we require only countable joins then it is called a $\sigma$-frame. The open sets of a topological space form a frame (or a $\sigma$-frame). A frame map is a function that preserves finite meets and arbitrary joins. A $\sigma$-frame map preserves countable joins. We collect this data into the category \Frm\ of frames and \sFrm\ of $\sigma$-frames.
 
-A continuous map between topological spaces induces a frame map on the frames of open sets, but in the opposite direction because the \emph{inverse} image of an open is open. This motivates the definition of the category \Locale\ of locales to be simply $\op{\Frm}$ and $\slocale=\op{\sFrm}$. (Recall that the opposite of a category is a category with all the same objects and morphisms, but with the direction of all the morphism arrows reversed.) We can define a functor $L:\Topcat\to\Locale$ on objects by mapping a space $X$ to its frame of open sets $\o(X)$ (so on objects, $L=\o$), and on morphisms by mapping a function $f:X\to Y$ to the opposite arrow of the induced morphism on frames, so that's two inversions giving us an arrow $L(f):L(X)\to L(Y)$. 
+A continuous map between topological spaces induces a frame map on the frames of open sets, but in the opposite direction because the \emph{inverse} image of an open is open. This motivates the definition of the category \Locale\ of locales to be simply $\op{\Frm}$ and $\slocale=\op{\sFrm}$. (Recall that the opposite of a category is a category with all the same objects and morphisms, but with the direction of all the morphism arrows reversed.) We can define a functor $L:\Topcat\to\Locale$ on objects by mapping a space $X$ to its frame of open sets $\o(X)$ (so on objects, $L=\o$), and on morphisms by mapping a function $f:X\to Y$ to the opposite arrow of the induced morphism on frames, so that's two inversions giving us an arrow $L(f):L(X)\to L(Y)$. We'll move forward with frames and locales, and we'll return to the $\sigma$ flavors when we need to bring in measure theory.
 
 \section{Points}
 
-For the topological space $\star$ consisting of a single point, its topology is just the poset $\{\bot \leq \top\}$. To convert points into a derived concept then, we can note that a point in a space $X$ is equivalent to a map $\mathrm{pt}:\star\to X$, which at the level of frames is a map $\o(X)\to\{\top, \bot\}$. The inverse image of $\top$ is the collection of all open sets that contain the point $\mathrm{pt}(\star)$. It forms what is known as a \emph{completely prime filter} in the frame, which is a collection $P$ of opens such that if $x\vee y\in P$ then $x\in P$ or $y\in P$. (This is analogous to a prime ideal, or the ideal generated by a prime number.) We can then move forward with locales and completely prime filters instead of spaces and points!
-
-Given a locale $L$, the set of completely prime filters constitutes the \emph{spatial part} of $L$, and this set inherits a topology from the structure of $L$. Locale maps create an association between the completely prime filters, and so we obtain a set function between the spatial parts of the locales. This is a functor $S:\Locale\to\Topcat$ and is right adjoint to $L$. If we go back and forth with $S\circ L$, starting from an honest topological space, then we get back an equivalent space with an equivalent topology so long as the original space is \emph{sober}, which is a definition that is almost circularly defined to meet this condition. Hausdorff spaces are sober. This is the categorical situation whereby locales are generalized spaces, and being spatial, and having points, are derived special properties.
+Consider the topological space $\star$ consisting of a single point. Its topology is just the poset $\{\bot \leq \top\}$. To treat points as a derived concept, note that a point in a space $X$ is equivalent to a map $\mathrm{pt}:\star\to X$, which at the level of frames is a map $\o(X)\to\{\top, \bot\}$. The inverse image of $\top$ is the collection of all open sets that contain the point $\mathrm{pt}(\star)$. It forms what is known as a \emph{completely prime filter} in the frame, which is a collection $P$ of opens such that if $x\vee y\in P$ then $x\in P$ or $y\in P$. (This is analogous to a prime ideal, or the ideal generated by a prime number.) We can then move forward with locales and completely prime filters instead of spaces and points!
 
 Note how compatible this is with a constructive point of view. To supply a point you must supply a function $\star\to X$. The points aren't given, you have to do work to produce one.
+
+Given a locale $X$, the set of completely prime filters constitutes the \emph{spatial part} of $X$, and this set inherits a topology from the structure of $X$. Locale maps create an association between any completely prime filters (because the maps preserve the meets and joins), and so we obtain a set function between the spatial parts of the locales. We can package this as a functor $S:\Locale\to\Topcat$ which turns out to be right adjoint to $L$. If we go back and forth with $S\circ L$, starting from an honest topological space, then we get back an equivalent space with an equivalent topology so long as the original space is \emph{sober}, which is a definition that is almost circularly defined to meet this condition. Hausdorff spaces are sober. The mathematicians who developed locale theory were very self-conscious about the names according to Peter Johnstone in \cite{johnstone2} and it shows --- they chose great names like ``sober.''
 
 \section{Sublocales}
 
 There are three equivalent ways to define sublocales. Normally I'd expect two since we are bouncing between two opposite categories. But there is a super interesting third definition as well, and the interplay of all three sheds light on the application to randomness.
 
 \subsection{Definition 1: Embedded subspaces}
-To me the most intuitive definition is the one that lets one think of a sublocale as an \emph{embedded subspace}, i.e. a monomorphic map with the extra requirement that the subspace is embedded. In the category of topological spaces and other concrete categories this means the domain is homeomorphic to its image. For example, for a map from $[0,1]$ into a space $X$ to be an embedding the curve must not self-intersect or do anything pathological. In categorical terms the sublocales are \emph{regular monomorphisms}. 
+To me the most intuitive definition is the one that lets one think of a sublocale as an \emph{embedded subspace}, i.e. a monomorphic map with the extra requirement that the subspace is embedded. In the category of topological spaces and other concrete categories this means the domain is homeomorphic to its image. For example, for a map from $[0,1]$ into a space $X$ to be an embedding the curve must not self-intersect or do anything pathological. In categorical terms the sublocales are \emph{regular monomorphisms}. You can already get a hint that this is a less permissive notion of subspace than subspaces in \Topcat, where any old subset of a topological space can be equipped with the subspace topology and considered a subobject.
 
 \subsection{Definition 2: Quotients of frames}
-In the category of frames the arrows are reversed and so a sublocale is in fact a quotient, i.e. an equivalence relation. Intuitively, two open sets are equivalent if they agree on the sublocale. In more detail, a sublocale $=_Y$ is an equivalence relation that preserves finite meets and arbitrary joins:
+In the category of frames the arrows are reversed and so a sublocale is in fact a quotient frame, i.e. an equivalence relation. Intuitively, two open sets are equivalent if they agree on the sublocale. In more detail, a sublocale $=_Y$ is an equivalence relation that preserves finite meets and arbitrary joins:
 \begin{align}
-U=_Y V\mathrm{\ and\ }U'=_Y V'&\quad\implies\quad U\cap U'=_Y V\cap V' \\
-U_i=_Y V_i\mathrm{\ for\ all\ } i\geq 0&\quad\implies\quad \bigcup_{i\geq 0}U_i =_Y \bigcup{i\geq } V_i.
+U=_Y V\mathrm{\ and\ }U'=_Y V'&\quad\implies\quad U\wedge U'=_Y V\wedge V' \\
+U_i=_Y V_i\mathrm{\ for\ all\ } i\geq 0&\quad\implies\quad \bigvee_{i\geq 0}U_i =_Y \bigvee{i\geq } V_i.
 \end{align}
 
 \subsection{Definition 3: Nuclei}
-The nucleus definition of a sublocale also takes place in the category of frames. A nucleus is a function $j:\o(X)\to\o(X)$ satisfying
+The nucleus definition of a sublocale also takes place in the category of frames. This is the one that feels novel to me. A nucleus is a function $j:\o(X)\to\o(X)$ satisfying
 \begin{align}
 U&\leq jU \\
 jjU &= jU \\
@@ -175,62 +176,83 @@ j(U\wedge V)&=j(U)\wedge j(V)
 \end{align}
 The intuition is that $j$ takes an open set to some largest version of itself satisfying some property, which is why the first condition has the containment, and why the second condition is idempotence -- doing the operation twice yields the same largest open. The third condition is that forming the ``largest version'' preserves finite intersection.
 
-Denote the fixed points of $j$ by $\o_j(X)$ and the dual object, i.e. its locale, by $X_j$. The map $j$ is a surjective frame map onto the set of fixed points, and so gives an embedding $i:X_j\hookrightarrow X$. This is basically performing the quotient from the previous definition.
+Denote the fixed points of $j$ by $\o_j(X)$ (these are the largest sets the other sets map onto) and denote the dual object, i.e. its locale, by $X_j$. The map $j$ is a surjective frame map onto the set of fixed points, and so gives an embedding $i:X_j\hookrightarrow X$. This is basically performing the quotient from the previous definition, mapping every open onto the largest representative in the equivalence class.
 
-\subsection{The collection of sublocales}
-The collection of all sublocales of a fixed locale $X$ is partially ordered by inclusion, just as we have in any category where we can define subobjects. It's worth mentioning that even more is true: the collection of sublocales forms a \emph{coframe}, which is a poset with finite joins and arbitrary meets, and where the joins distribute over the meets. This collection is nowhere near as straightforward to contemplate as the collection of subsets of a set, but we will keep thinking through the consequences to find how it connects with randomness.
+\subsection{The collection of all sublocales}
+The collection of all sublocales of a fixed locale $X$ is partially ordered by inclusion, just as we have in any category where we can define subobjects. It's worth mentioning that even more is true: the collection of sublocales forms a \emph{coframe}, which is duel to a frame, so is a poset with finite joins and arbitrary meets, and where the joins distribute over the meets. This collection is nowhere near as straightforward to contemplate as the collection of subsets of a set, but we will keep thinking through some of the consequences to find how it connects with randomness.
 
-Let's define a sublocale with no points. Let $X$ be a Hausdorff topological space without isolated points and let $\o(X)$ be the frame of its open sets. Consider the double-negation operation $\neg\neg:\o(X)\to\o(X)$. What does this do? The negation of an open $U$ is the largest open disjoint from $U$. In $X$ this is the same as the interior of the complement. $\neg\neg U$ is thus the largest open disjoint from the largest open disjoint from $U$. For any $p\in X$ we have that $\neg\neg(X-\{p\}) = \emptyset$. 
+We're ready to define a sublocale with no points! Let $X$ be a Hausdorff topological space without isolated points and let $\o(X)$ be the frame of its open sets. Consider the double-negation operation $\neg\neg:\o(X)\to\o(X)$. What does this do? The negation of an open $U$ is the largest open disjoint from $U$ (or equivalently, the union of all opens disjoint from $U$). In $X$ this is the same as the interior of the complement. So $\neg\neg U$ is thus the largest open disjoint from the largest open disjoint from $U$. For a lot of sets this is just $U$ again. But for any $p\in X$ we have that $\neg\neg(X-\{p\}) = \emptyset$, because $\neg (X-\{p\})=X$. So this operation blurs out the points.
 
-$\neg\neg$ is idempotent, and in fact defines a nucleus hence an embedding $nn:X_{\neg\neg}\hookrightarrow X$, where $nn^{-1}U=\neg\neg U$. This sublocale $\neg\neg X$ has no points! For suppose $p:\star\to X_{\neg\neg}$ is a point. The composition $nn\circ p$ is thus a point of $X$. Consider the open set given by deleting this point from $X$, i.e. $X-\{nn(p(\star))\}$. Taking the inverse image we have $p^{-1}(\neg\neg(X-\{nn(p(\star)\})) = \bot$ because only opens that contain the image of $\star$ give $\top$. But as we saw in the previous paragraph $\neg\neg(X-\{nn(p(\star)\}) = X$, so the above expression $p^{-1}(\neg\neg(X-\{nn(p(\star))\})$ becomes $p^{-1}(X)$ which is $\top$, a contradiction.
+$\neg\neg$ is idempotent, and in fact defines a nucleus hence an embedding $nn:X_{\neg\neg}\hookrightarrow X$, where $nn^{-1}U=\neg\neg U$. It's this sublocale $\neg\neg X$ that has no points. For suppose $p:\star\to X_{\neg\neg}$ is a point. The composition $nn\circ p$ is thus a point of $X$. Consider the open set given by deleting this point from $X$, i.e. $X-\{nn(p(\star))\}$. Taking the inverse image (i.e. moving to the frame representation) we have $p^{-1}(\neg\neg(X-\{nn(p(\star)\})) = \bot$ because only opens that contain the image of $\star$ map back to $\top$. But as we saw in the previous paragraph $\neg\neg(X-\{nn(p(\star)\}) = X$, so the above expression $p^{-1}(\neg\neg(X-\{nn(p(\star))\})$ becomes $p^{-1}(X)$ which is $\top$, a contradiction! You can't have points if you blurred away the points.
 
-Furthermore, $\neg\neg X$ is dense in $X$. For a sublocale $A\to X$ to be dense means that $A$ intersects every open sublocale. (An open sublocale is one of the original open sets in $X$, promoted to a sublocale by embedding it in $X$.) This follows from being a nucleus (which we did not prove): $\neg\neg A \supseteq A$. 
-
-What makes the category of locales different from the category of spaces is that there is a \emph{largest dense sublocale} of any locale $X$ and it is exactly $\neg\neg X$. And by largest I mean in terms of the inclusion relation on sublocales. One consequence of having a largest dense sublocale is that any two dense sublocales must intersect! This is absolutely not the case with topological spaces such as $\mathbb{R}$ which can be decomposed into disjoint dense sub\emph{sets} such as $\mathbb{Q}$ and $\mathbb{R}\backslash\mathbb{Q}$. If we promote these two subsets to sublocales, they will intersect!
+Furthermore, $\neg\neg X$ is dense in $X$. For a sublocale $A\hookrightarrow X$ to be dense means that $A$ intersects every open sublocale. (An open sublocale is one of the original open sets in $X$, promoted to a sublocale by embedding it in $X$.) This follows from being a nucleus: $\neg\neg A \supseteq A$. I'm skipping a more front-loaded collection of definitions and lemmas to create a linear narrative, but the definitions are definitely piling up, aren't they?
 
 \subsection{Locale morphisms}
 
-Embedding a locale as a sublocale of another locale is a more exotic operation than set injection. We can directly compare these morphisms by starting with an embedding of topological spaces $f:X\hookrightarrow Y$ and asking what the corresponding sublocale morphism is. The answer is given by a frame map called the push-forward $f_*:\o(X)\to\o(Y)$, which is right adjoint to the frame map $f^{-1}:\o(Y)\to\o(X)$. It is defined as follows: $$f_*(U)=\bigcup_{f^{-1}(V)\subseteq U}V.$$ In other words, an open set $U\subseteq X$ maps under $f_*$ to the \emph{largest} open set in $Y$ that pulls back to some subset of $U$.
+A fact that makes the category of locales different from the category of spaces is that there is a \emph{smallest dense sublocale} of any locale $X$ and it is exactly $\neg\neg X$. And by largest I mean inside the poset of sublocales. One consequence of having a smallest dense sublocale is that any two dense sublocales must intersect! This is absolutely not the case with topological spaces such as $\mathbb{R}$ which can be decomposed into disjoint dense sub\emph{sets} such as $\mathbb{Q}$ and $\mathbb{R}\backslash\mathbb{Q}$. This is confusing! What does the sublocale $\mathbb{Q}\hookrightarrow\mathbb{R}$ look like then? The consequences for measure theory are significant, since defining measures on sets leads to some pathological examples involving cosets of the rationals.
 
-This is an unusual operation to contemplate. Here's an example that helps me: imagine $f:[0,1]\to\mathbb{R}^2$ is some smooth curve in the plane. Given an open interval $U\subseteq[0,1]$, its image in the plane is a one-dimensional subset, so won't itself be open. Instead to compute $f_*(U)$ we have to find the largest open set in the plane whose inverse image is $U$, which will look like \emph{all of $\mathbb{R}^2$} minus two skinny pieces of the curve that aren't in the image of $U$.
+Embedding a locale as a sublocale of another locale is a novel operation compared to set injection. It needs to be a map between frames of open sets, but one that goes in the same direction as the set function instead of backwards. It is called the ``push-forward'' $f_*:\o(X)\to\o(Y)$, which is actually right adjoint to the frame map $f^{-1}:\o(Y)\to\o(X)$. It is defined as follows: $$f_*(U)=\bigcup_{f^{-1}(V)\subseteq U}V.$$ In other words, an open set $U\subseteq X$ maps under $f_*$ to the \emph{largest} open set in $Y$ that pulls back to some subset of $U$.
 
-Let's consider the inclusion $i:\mathbb{Q}\hookrightarrow\mathbb{R}$. The  push-forward map $i_*$ sends the open set ``all of $\mathbb{Q}$'' to the largest open in $\mathbb{R}$ whose inverse image is contained in $\mathbb{Q}$. But $\mathbb{Q}$ is dense so this is all of $\mathbb{R}$, there's no smaller open that contains the rationals! The requirement that this push-forward be an open set is forbidding us from carving out these pathological dense subsets in the category of locales.
+This is an elementary operation but not one that comes up in a standard topology course (at least a 20th century one!). Here's an example that may help: imagine $f:[0,1]\to\mathbb{R}^2$ is some smooth curve in the plane. Given an open interval $(a,b)\subseteq[0,1]$, its image in the plane is a one-dimensional subset, so won't itself be open. Instead to compute $f_*((a,b))$ we have to find the largest open set in the plane whose inverse image is $(a,b)$, which will look like \emph{all of $\mathbb{R}^2$} minus two skinny pieces of the curve that are the images of $[0,a]$ and $[b,1]$. So it has the image in it, plus all the rest of the plane that isn't in the image of the rest of $[0,1]$.
 
 The requirement that $f_*$ give the \emph{largest} open set such that some condition holds should remind us of a nucleus. In fact $f_*$ is a nucleus that defines the sublocale $f:\mathrm{Loc}(X)\to \mathrm{Loc}(Y)$, the ``promotion'' of the subspace inclusion to a sublocale.
 
-\section{Measures thereon}
+Now let's get back to considering the inclusion $i:\mathbb{Q}\hookrightarrow\mathbb{R}$. The  push-forward map $i_*$ sends the open set ``all of $\mathbb{Q}$'' in $\mathbb{Q}$ to the largest open in $\mathbb{R}$ whose inverse image is contained in $\mathbb{Q}$. But $\mathbb{Q}$ is dense so this is all of $\mathbb{R}$! There's no smaller open that contains the rationals! The requirement that this push-forward be an open set is forbidding us from carving out these pathological dense subsets in the category of locales.
+
+\section{Measure theory}
 We have prepared all the abstract background. We have a new setting for topology called locale theory, which has broken away from the concept of a point. We have seen that the monomorphisms are different than in the category of topological spaces, and we have examples of sublocales that have no points. Let's bring measure theory into the mix and define randomness in this setting.
 
-We will define a measure on a locale/frame and then extend it to all the sublocales of the frame.
+We are back to requiring the ``\sig'' on the words ``frame'' and ``locale'' so we can reconnect with the countability requirements of measures. Simpson works out the details in \cite{simpson}.
 
-A measure on a frame is a function $\mu:F\to [0,\infty]$ satisfying
+We will define a measure on a \sig locale/\sig frame and then extend it to all the \sig sublocales of the \sig frame.
+
+A measure on a \sig frame is a function $\mu:F\to [0,\infty]$ satisfying
 $$\mu(\bot)=0$$
 $$x\leq y\implies \mu(x)\leq\mu(y)$$
 $$\mu(x)+\mu(y)=\mu(x\vee y)+\mu(x\wedge y)\quad\mathrm{("modularity")}$$
 $$(x_i)_{i\geq 0}\mathrm{\ ascending\ }\implies \mu(\bigvee_{i\geq 0}x_i)=\sup_{i\geq 0}\mu(x_i)\quad\mathrm{("continuity")}.$$
-We say $\mu$ is a probability measure if $\mu(\top)=1$. We will also call $\mu$ a measure on a locale if it is a measure on the corresponding frame of opens.
+We say $\mu$ is a probability measure if $\mu(\top)=1$. We will also call $\mu$ a measure on a \sig locale if it is a measure on the corresponding \sig frame of opens.
 
-To bring the concept of measure to sublocales we will generalize the concept of outer measure. We say a locale is \emph{fitted} if for every sublocale $Y\subseteq X$ it holds that $Y=\cap\mathcal{N}(Y)$ where $\mathcal{N}(Y)=\{U\in\o(X)|Y\subseteq U\}$. We extend the measure $\mu$ to a measure $\mu^*$ on any sublocale by $\mu^*(Y)=\inf_{U\in\mathcal{N}(Y)}\mu(U)$, i.e. the limit of the measure of the open sets that intersect to $Y$. There is work to show that spaces we care about are fitted, and that this definition really defines a measure (see section 5 of \cite{simpson}), but I will skip all that.
+To bring the concept of measure to \sig sublocales we will generalize the concept of outer measure. We say a \sig locale is \emph{fitted} if for every \sig sublocale $Y\subseteq X$ it holds that $Y=\bigwedge\mathcal{N}(Y)$ where $\mathcal{N}(Y)=\{U\in\o(X)|Y\subseteq U\}$. We extend the measure $\mu$ to a measure $\mu^*$ on any \sig sublocale by $\mu^*(Y)=\inf_{U\in\mathcal{N}(Y)}\mu(U)$, i.e. the limit of the measure of the open sets that intersect to $Y$. There is work to show that spaces we care about are fitted, and that this definition really defines a measure (see section 5 of \cite{simpson}).
 
-Before we get to randomness let's stop to mention a huge payoff we can now reap. Simpson \cite{simpson} proves in Example 4.7 that the standard measure on open subsets of $\mathbb{R}^n$, which extends to a measure on sublocales in the way we just defined, is preserved under Euclidean translations. This measure agrees with Lebesgue measure whenever the sublocale agrees with a measurable set. In standard measure theory there is no translation invariant measure on arbitrary subsets of $\mathbb{R}^n$ due to pathological examples that are automatically avoided in locale theory. We have traded the initial awkwardness of working with locales and sublocales for a rather compelling cleanup of measure theory.
+We can now cash in the fact that we cannot decompose locales into two dense sublocales. Simpson \cite{simpson} proves in Example 4.7 that the standard measure on open subsets of $\mathbb{R}^n$, which extends to a measure on \sig sublocales in the way we just defined, is preserved under Euclidean translations. This measure agrees with Lebesgue measure whenever the \sig sublocale agrees with a measurable set. In standard measure theory there is no translation invariant measure on arbitrary subsets of $\mathbb{R}^n$ due to pathological examples like cosets of rational numbers, which of course are automatically avoided in locale theory. 
 
 \subsection{The random sublocale}
-We are ready to define the random sublocale $\ran_X$ of an arbitrary locale $X$ equipped with a probability measure $\mu$. We'll do it three times, once for each definition of sublocale.
+We are ready to define the random \sig sublocale $\ran_X$ of an arbitrary \sig locale $X$ equipped with a probability measure $\mu$. We'll do it three times, once for each definition of sublocale.
 
-The spatial definition of $\ran_X$ is the smallest sublocale of measure 1, or equivalently the intersection of all sublocales of measure 1. This tracks exactly with the definition of Kurtz randomness seen elsewhere in the literature. It's morally similar to $\neg\neg X$ but making use of measure. $\neg\neg X$ is the smallest dense sublocale of $X$, whereas $\ran_X$ is the smallest measure-1 sublocale.
+The spatial definition of $\ran_X$ is the smallest \sig sublocale of measure 1, or equivalently the intersection of all \sig sublocales of measure 1. This tracks exactly with the definition of Kurtz randomness seen in the algorithmic randomness literature. It's morally similar to $\neg\neg X$ but making use of measure. $\neg\neg X$ is the smallest dense sublocale of $X$, whereas $\ran_X$ is the smallest measure-1 \sig sublocale.
 
 The quotient definition of $\ran_X$ is the equivalence relation $=_{\ran_X}$ given by $U=_{\ran_X} V \iff \mu(U)=\mu(U\cap V)=\mu(V)$. Opens are equivalent if they cover the same amount of measure.
 
-The nucleus definition is that $j_{\ran_X}(U) = \bigcup_{V\supseteq U, \mu(U)=\mu(V)}V.$ In other words, the maximal open that contains $U$ and with the same measure as $U$.
+The nucleus definition is not mentioned by Simpson, but obviously it's given by $j_{\ran_X}(U) = \bigcup_{V\supseteq U, \mu(U)=\mu(V)}V.$ In other words, it maps $U$ to the maximal open that contains $U$ and has the same measure as $U$.
 
-This sublocale has no points. Given a point $p\in X$, the set $X-\{p\}$ has measure 1 and so $\ran_X\subset X-\{p\}$ and so $p$ is not present in the random sublocale.
+This \sig sublocale has no points! Given a point $p\in X$, the set $X-\{p\}$ has measure 1 and so $\ran_X\subseteq X-\{p\}$ and so $p$ is not present in the random \sig sublocale.
 
 \section{Conclusion: open sets vs randomness}
-How Kurtz randomness fails the LLN (see \cite{NiesAndre2009CaR}, Section 3.5). 
+Let's recap. Topology is about open sets, and open sets correspond to semideciadable properties, i.e. properties that can be verified in finite time, but might need infinite time to refute. This is philosophically adjacent to being computable and constructive. In the Cantor space of binary sequences, the open sets are unions of cylinders, which are finite prefixes of sequences. The finiteness is the openness and vice versa.
 
-The prospect for importing all the various randomness notions into this framework. The $\mathcal{S}$ functor.
+Locales take just the open sets from topology and build from there, without allowing us to have points unless we can construct them.
+
+We've seen that locales behave very differently! There are smallest dense subsets, and you can't decompose the reals into a disjoint union of rational and irrational. The topological glue constrains you from doing this.
+
+Measure theory can be brought into this context and avoids some pathological problems that set theory causes.
+
+We can form a smallest full-measure \sig sublocale, the \sig sublocale of randoms. This sublocale has no points. So if we revisit our set theoretic foundations and consider open sets to be primary, then we arrive at a definition of randomness where the randoms constitute a space with full measure but no points. This makes perfect sense once you appreciate that having points requires work to produce one, but random points can never be fully produced.
+
+As a last piece of speculation on my part, I imagine we could replace statements like 
+\begin{quote}
+$x\in [0,1]$ is Schnorr random if and only if every computable function $f$ of bounded variation with effectively integrable derivative $f'$ is differentiable at $x$
+\end{quote}
+with 
+\begin{quote}
+If $f:[0,1]\to\mathbb{R}$ is a morphism in \Locale, then $f$ is differentiable on $\ran_{[0,1]}$.
+
+We could drop the requirement of computability because we'd be in a constructive framework already, and instead of stating the result pointwise we'd have a global statement. It remains to properly define smoothness in the locale framework and to work out many details!
+\end{quote}
 
 \begin{comment}
+How Kurtz randomness fails the LLN (see \cite{NiesAndre2009CaR}, Section 3.5). 
+
 Paper: locale theory
 - Is the relationship between nucleus and quotient always just that each set gets mapped to its value under the nucleus? The nucleus map is the quotient map?
 - Ran, the sublocale of random points
